--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^4.1.1",
     "@react-native/new-app-screen": "0.83.1",
+    "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.1",
     "core-js": "^3.47.0",
     "graphql": "^16.12.0",
