--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "@apollo/client": "^4.1.1",
+    "@apollo/client": "^4.1.2",
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.1",
-    "core-js": "^3.47.0",
+    "core-js": "^3.48.0",
     "graphql": "^16.12.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.20.0",
+    "rxjs": "^7.8.2",
     "toastify-react-native": "^7.2.3"
   },
   "devDependencies": {
