--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.1",
+    "@shopify/flash-list": "^2.2.0",
     "core-js": "^3.48.0",
     "graphql": "^16.12.0",
     "react": "19.2.0",
