--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@shopify/flash-list": "^2.2.0",
     "core-js": "^3.48.0",
     "graphql": "^16.12.0",
+    "moment": "^2.30.1",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-safe-area-context": "^5.6.2",
